Fix command list-based devices on 64-bit platforms. Ghostscript always writes int values to the command list but old code interpreted the bit pattern as a long int, causing conversion of the negative values to large positive ones. Bug 689353.

DIFFERENCES:
None on 32-bit platforms.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8198 a1074d23-0009-0410-80fe-cf8c14f379e6